--- a/source/stylesheets/app.sass
+++ b/source/stylesheets/app.sass
@@ -1,5 +1,50 @@
+// KeywordBrain Blog
+
+// variables and config
+@import "base"
+
+@import "mixins/box-sizing"
+@import "mixins/outline"
+
+// Compass things
+@import "compass/utilities/general/clearfix"
+@import "compass/css3/transition"
+@import "compass/css3/border-radius"
+
+// use Susy as the grid system library
+@import "susy"
+
+// use breakpoints to help with responsiveness
+@import "breakpoint"
+
+// grid setup
+@import "modules/grid"
+
+// font stacks
+@import "modules/typo"
+
+*
+  +box-sizing(border-box)
+
+html, body
+  height: 100%
+
 body
+  +font-stack-base
+  font-size: $font-size-base
+  margin: 0
+  padding: 0
   background: #FAFAFA
 
-article.article
-  max-width: 500px
+// this wraps everything and keeps the footer always at the bottom
+.site-wrap
+  min-height: 100%
+  position: relative
+  padding-bottom: $footer-height + $padding
+
+  +breakpoint($bp-small)
+    padding-bottom: $footer-height - $gutter
+
+@import "modules/header"
+@import "modules/article"
+@import "modules/footer"
