refactor: move highlight color to sass variable

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -7,6 +7,9 @@ $font-size-base: 14px;
 
 $footer-height: 40px;
 
+$color-highlight: #c3322f; // red
+// $color-highlight: #2fcd72; // green
+
 // Susy grid config
 $base-grid-columns: 12;
 
