--- a/source/stylesheets/app.sass
+++ b/source/stylesheets/app.sass
@@ -34,7 +34,7 @@ body
   font-size: $font-size-base
   margin: 0
   padding: 0
-  background: #FAFAFA
+  background: #fafafa
 
 // this wraps everything and keeps the footer always at the bottom
 .site-wrap
