--- a/source/stylesheets/modules/_article.sass
+++ b/source/stylesheets/modules/_article.sass
@@ -14,7 +14,7 @@
 
   .article__meta
     +font-stack-sans
-    color: #c3322f
+    color: $color-highlight
     margin-bottom: $padding
     font-weight: 400
 
@@ -60,7 +60,7 @@
 
   // general content element styles
   a
-    color: #c3322f
+    color: $color-highlight
     &:hover
       text-decoration: none
 
@@ -71,7 +71,7 @@
     font-style: italic
     font-size: 1.8em
     line-height: 1.2em
-    border-left: 3px solid #c3322f
+    border-left: 3px solid $color-highlight
     margin-left: 0
     padding-left: $padding
 
