--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -5,7 +5,7 @@ description: KeywordBrain Insights Blog
 
 .content
   -# the blog is called 'blog', see config.rb
-  - blog('blog').articles.each do |article|
+  - blog.articles.each do |article|
 
     %article.article.article--list{ id: article.id }
       %header
