fix: add css for to <hr>

--- a/source/blog/stylesheets/modules/_article.sass
+++ b/source/blog/stylesheets/modules/_article.sass
@@ -93,6 +93,12 @@
     span
       font-size: 0.6em
 
+  hr
+    border: none
+    height: 1px
+    background: #ddd
+    margin: $padding * 1.5 0
+
   code, kbd
     +font-stack-mono
     font-size: 0.9em
