refactor: move friendly date helper to Middleman::Sitemap::Resource
this used to be a global helper method, but scoping it to the resource
as an instance method makes more sense in this case.

--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -18,4 +18,4 @@ description: KeywordBrain Insights Blog
         by
         %strong= article.author['name']
         on
-        %time{ datetime: article.date.strftime('%Y-%m-%d') }= friendly_date(article.date)
+        %time{ datetime: article.date.strftime('%Y-%m-%d') }= article.friendly_date
